--- a/src/app/components/item-list/item-list.component.html
+++ b/src/app/components/item-list/item-list.component.html
@@ -36,7 +36,7 @@
                  </div>
                 <div class="nomeDoProduto"> 
                  <strong>Quantidade:</strong>
-                  Quantidade: {{ product.quantidade }} 
+                  {{ product.quantidade }} 
                  </div> 
              </div>
              <div class="div-button-list">
